platforms/gke/base/use-cases/federated-learning/terraform/config_management/templates/cross-device-example/cross_device_workloads.yaml
# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${cross_device_workload_name}
  namespace: ${namespace_name}
  labels:
    app: odp-federated
    service: ${cross_device_workload_name}
spec:
  replicas: ${cross_device_workload_replicas}
  selector:
    matchLabels:
      app: odp-federated
      service: ${cross_device_workload_name}
  template:
    metadata:
      labels:
        app: odp-federated
        service: ${cross_device_workload_name}
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8080"
    spec:
      serviceAccountName: ${cross_device_kubernetes_service_account_name}
      containers:
        - name: ${cross_device_workload_name}
          image: ${cross_device_container_image_tag}
          ports:
            - containerPort: ${cross_device_workload_port}
          resources:
            limits:
              cpu: "2"
              memory: "3Gi"
            requests:
              cpu: "500m"
              memory: "2Gi"
          livenessProbe:
            httpGet:
              path: /healthz
              port: ${cross_device_workload_port}
          readinessProbe:
            httpGet:
              path: /ready
              port: ${cross_device_workload_port}
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            privileged: false
            runAsUser: 10000
            runAsGroup: 10000
            capabilities:
              add: []
              drop:
                - NET_RAW
---
apiVersion: v1
kind: Service
metadata:
  name: ${cross_device_workload_name}
  namespace: ${namespace_name}
  labels:
    app: odp-federated
    service: ${cross_device_workload_name}
spec:
  selector:
    app: odp-federated
    service: ${cross_device_workload_name}
  ports:
    - port: ${cross_device_workload_port}
      protocol: TCP
      targetPort: ${cross_device_workload_port}
      name: tcp-cross-device
  type: ClusterIP
